# gkm-world

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
doc/: code_style_convention.md
documentation/: code_style_convention.md  generic_architecture.md
include/: block_chain.h  bounding_box.h  config.h  fast_index.h  fast_index_map.h  fnv_hash.h  game_logic.h  global_parameters.h  global_types.h  log.h  logic.h  mac_address.h  node.h  packet_pool.h  pool.h  process_spawn.cpp  process_spawn.h  protocol.h  protocol_enum.h  transport.h
include/balance_tree/: common.h
include/gkm_model/: model.h
include/gkm_world/: configuration_reader.h  coordinate_2d.h  fast_index.h  fixed_string.h  fnv_hash.h  game_logic.h  gkm_world.h  log_helper.h  logger.cpp  logger.h  mac_address.h  neighbor_enum.h  process_spawn.cpp  process_spawn.h  protocol.h  protocol_enum.h  transport.h
include/gkm_world/balance_tree/: common.h
run_area/: autosave.gmb  balancer_server.cfg  clean_logs.bat  proxy_server.cfg  proxy_server2.cfg  res_packer.cfg  start_server.bat
source/: CMakeLists.txt
source/balance_monitor/: CMakeLists.txt  balance_monitor_widget.cpp  balance_monitor_widget.h  main_monitor_window.cpp  main_monitor_window.h  main_monitor_window.ui  monitor.cpp
source/balancer_monitor/: CMakeLists.txt  balancer_monitor_widget.cpp  balancer_monitor_widget.h  balancer_server_info.h  main_monitor_window.cpp  main_monitor_window.h  main_monitor_window.ui  monitor.cpp  monitor_udp_connection.cpp  monitor_udp_connection.h  node_tree.cpp  node_tree.h  server_info.h  server_tree.cpp  server_tree.h
source/balancer_server/: CMakeLists.txt  balance_tree.cpp  balance_tree.h  balancer_server.cpp  balancer_server.h  main.cpp
source/bot_client/: CMakeLists.txt  main.cpp  udp_connection.cpp  udp_connection.h
source/log_server/: CMakeLists.txt  log_server.cpp  log_server.h  main.cpp
source/mesh_builder/: CMakeLists.txt  aux_geometry.h  bilinear_interpolation.h  build_info.h  build_mesh.cpp  build_mesh.h  build_options.cpp  build_options.h  color_hasher.cpp  color_hasher.h  common.h  genetic_optimization.cpp  genetic_optimization.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  mesh.h  mesh_builder.cpp  mesh_builder.h  mesh_builder_widget.cpp  mesh_builder_widget.h  mesh_project.cpp  mesh_project.h  task.h  texture.cpp  texture.h  texture_adapter.cpp  texture_adapter.h  texture_atlas.cpp  texture_atlas.h  texture_widget.cpp  texture_widget.h  triangle_texture.cpp  triangle_texture.h  vbo.h  vbo_fill.cpp  vbo_fill.h  vertex.h
source/node_server/: CMakeLists.txt  logic_thread.cpp  logic_thread.h  main.cpp  node_server.cpp  node_server.h  user_location.h
source/proxy_server/: CMakeLists.txt  main.cpp  proxy_server.cpp  proxy_server.h  user_info.h
source/res_packer/: CMakeLists.txt  main.cpp  model_cache.cpp  model_cache.h  res_packer.cpp  res_packer.h  texture_cache.cpp  texture_cache.h
source/vector_pool_proof/: CMakeLists.txt  main.cpp
source/win_client/: CMakeLists.txt  another_player.h  bgfx_common.h  bgfx_draw_info.h  bgfx_engine.cpp  bgfx_engine.h  bgfx_model_cache.cpp  bgfx_model_cache.h  bgfx_shader.h  bgfx_texture.cpp  bgfx_texture.h  bgfx_texture_cache.cpp  bgfx_texture_cache.h  bgfx_windows.h  main.cpp  main.h  udp_connection.cpp  udp_connection.h  user_interface.cpp
source/win_client/shaders/: fs_unlit.sc  varying.def.sc  vs_pos_tex.sc
src/: CMakeLists.txt
src/balancer_monitor/: CMakeLists.txt  balancer_monitor_widget.cpp  balancer_monitor_widget.h  main_monitor_window.cpp  main_monitor_window.ui  monitor.cpp  monitor_udp_connection.cpp  monitor_udp_connection.h  server_info.h  server_tree.cpp  server_tree.h
src/balancer_server/: CMakeLists.txt  balance_tree.cpp  balance_tree.h  balancer_server.cpp  balancer_server.h  main.cpp
src/bot_client/: CMakeLists.txt  main.cpp  udp_connection.cpp  udp_connection.h
src/log_server/: CMakeLists.txt  log_server.cpp  log_server.h  main.cpp
src/node_server/: CMakeLists.txt  logic_thread.cpp  logic_thread.h  main.cpp  node_server.cpp  node_server.h  user_location.h
src/proxy_server/: CMakeLists.txt  main.cpp  proxy_server.cpp  proxy_server.h  user_info.h
src/res_packer/: CMakeLists.txt  main.cpp  model_cache.cpp  model_cache.h  res_packer.cpp  res_packer.h  texture_cache.cpp  texture_cache.h
src/vector_pool_proof/: CMakeLists.txt  main.cpp
src/win_client/: CMakeLists.txt  another_player.h  bgfx_common.h  bgfx_draw_info.h  bgfx_engine.cpp  bgfx_engine.h  bgfx_model_cache.cpp  bgfx_model_cache.h  bgfx_shader.h  bgfx_texture_cache.cpp  bgfx_texture_cache.h  bgfx_windows.h  main.cpp  main.h  udp_connection.cpp  udp_connection.h  user_interface.cpp  user_interface.h
src/win_client/shaders/: fs_unlit.sc
