# Copyright 2018-2019 Petr Petrovich Petrov. All rights reserved.
# License: https://github.com/PetrPPetrov/gkm-world/blob/master/LICENSE

add_subdirectory(balance_monitor)
add_subdirectory(balancer_server)
add_subdirectory(bot_client)
# add_subdirectory(gl_client)
add_subdirectory(node_server)
add_subdirectory(proxy_server)
add_subdirectory(vector_pool_proof)

